# slinky

./: .gitignore  Cargo.toml  README.md
.github/workflows/: README.md  release.yml
examples/: stow_demo.rs
src/: cli.rs  config.rs  daemon.rs  error.rs  lib.rs  main.rs  remote.rs  secrets.rs  service.rs  stow.rs
tests/: stow_integration.rs
