[package]
name = "slnky"
version = "0.1.1"
edition = "2021"
authors = ["plyght"]
description = "A modern dotfiles manager with stow-compatible symlink management, remote repository support, and secret encryption"
license = "MIT"

[[bin]]
name = "slnky"
path = "src/main.rs"

[dependencies]
age = "0.10"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
directories = "5.0"
indicatif = "0.17"
notify = "6.1"
notify-debouncer-full = "0.3"
regex = "1.11"
rpassword = "7.3"
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
url = "2.5"

[dev-dependencies]
tempfile = "3.13"
